<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviewActivity"
    android:background="@color/white">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/previewFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_marginTop="-36dp"
            android:paddingBottom="36dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@drawable/preview_panel"
            android:orientation="vertical">
            <TextView
                android:id="@+id/grainFoundText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grain_found"
                android:background="@drawable/preview_close_btn"
                android:backgroundTint="#45E60808"
                android:textColor="#E60808"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:padding="12dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/noGrainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_grain_found"
                android:background="@drawable/preview_close_btn"
                android:backgroundTint="#4531E608"
                android:textColor="#229708"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:padding="12dp"
                android:visibility="gone"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="16dp"
                android:id="@+id/confidenceView"
                android:layout_gravity="center"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:background="@drawable/capture_btn"
                android:backgroundTint="#229708"
                android:gravity="center">
                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:max="100"
                    android:progress="0"
                    android:id="@+id/confidenceProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="8dp"
                    app:indicatorColor="@color/white"
                    app:trackCornerRadius="8dp"
                    app:indicatorSize="96dp"
                    app:trackThickness="6dp"/>
                <TextView
                    android:id="@+id/confidenceValue"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_confidence"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_confidence"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/closeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview_close"
        android:textColor="@color/white"
        android:paddingHorizontal="32dp"
        android:background="@drawable/preview_close_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>